# adafruit-macropad-helper

./: README.md  pyproject.toml
adafruit_macropad_helper/: circuit_python.py  cli.py  serial_device.py
adafruit_macropad_host_script/: circuit_python.py  cli.py  script.py  serial_device.py
tests/: test_adafruit_macropad_host_script.py
