[tool.poetry]
name = "adafruit_macropad_helper"
version = "0.1.0"
description = "Send data to the macropad from a host computer"
authors = ["Kenny Baskett <kbaskett248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-board-toolkit = "^1.1.0"
PyGetWindow = "^0.0.9"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
macropad-helper = "adafruit_macropad_helper.cli:main"
